welcome.lessons.welcome.array.island.Island.scala.error
island:7: error: not found: value T
		 if ( T(c) == 0)
                      ^island:11: error: not found: value T
		 else if (T(c) = > T(c - 1) )
                          ^island:5: error: type mismatch;
 found   : Unit
 required: Int
	for (c <- 1 to num.length - 1)
               ^